Пуш поиского движка: корректировки